<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Hello World, MyActivity"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/explanation"
        android:textColor="@color/string_color"
        />

    <ToggleButton
        android:id="@+id/pedometer_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textOn="@string/button_on_text"
        android:textOff="@string/button_off_text"
        />

    <TextView android:id="@+id/pedometer_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/pedometer_label"
        android:textColor="@color/string_color"
        />

    <Spinner
        android:id="@+id/view_selector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/view_prompt"
        />

</LinearLayout>

